[package]
name = "kmpm"
version = "0.1.1"
authors = ["Tom0427"]
description = "KMP(Knuth-Morris-Pratt algorithm) method library"
documentation = "https://github.com/Tom-game-project/kmpm.git"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
