[package]
name = "kmpm"
version = "0.2.2"
authors = ["Tom0427"]
description = "KMP(Knuth-Morris-Pratt algorithm) method library"
repository = "https://github.com/Tom-game-project/kmpm.git"
categories = ["Algorithms","kmp"]
documentation = "https://docs.rs/kmpm/latest/kmpm/"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
